--- a/samples/MvcSample.Web/Views/FormUrlEncoded/Index.cshtml
+++ b/samples/MvcSample.Web/Views/FormUrlEncoded/Index.cshtml
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <title>JQuery FormUrlEncoded example</title>
-    <script type="text/javascript" src="~/Scripts/jquery-2.0.3.min.js"></script>
+    <script src="~/lib/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="~/Scripts/Mvc.js"></script>
     <script type="text/javascript">
-            $(document).ready(function () {
+            $(function () {
                 $('#personButton').click(function () {
                     var data = {
                         Name: 'SamplePerson',
@@ -15,36 +15,37 @@
                             Street: 'SampleStreet',
                             City: "SampleCity",
                             State: "SampleState",
-                            Pin: 11
+                            ZipCode: 11
                         },
                         PastJobs: [
                             {
                                 JobTitle: "SampleJob1",
                                 EmployerName: 'Employer1',
-                                YearsOfExperience: 2
+                                Years: 2
                             },
                             {
                                 JobTitle: "SampleJob2",
                                 EmployerName: 'Employer2',
-                                YearsOfExperience: 4
+                                Years: 4
                             },
                             {
                                 JobTitle: "SampleJob3",
                                 EmployerName: 'Employer3',
-                                YearsOfExperience: 1
+                                Years: 1
                             }
                         ]
                     };
 
-                    $.post('@Url.Action("IsValidPerson", "FormUrlEncoded")', Mvc.stringify(data)).done(function (result) {
-                        if (result)
-                        {
-                            $("#validPerson").html("The submitted data belongs to a valid person.");
-                        }
-                        else
-                        {
-                            $("#validPerson").html("The submitted data is invalid.");
-                        }
+                    $.post('@Url.Action("IsValidPerson", "FormUrlEncoded")', MVC.stringify(data))
+                        .done(function (result) {
+                            if (result)
+                            {
+                                $("#validPerson").html("The submitted data belongs to a valid person.");
+                            }
+                            else
+                            {
+                                $("#validPerson").html("The submitted data is invalid.");
+                            }
                     });
                 });
             });
